Generate block object modify html for personal

--- a/public/musa/districts/discricts.html
+++ b/public/musa/districts/discricts.html
@@ -4,9 +4,21 @@
   <meta charset="utf-8">
   <meta name="description" content="Список отчетов">
   <meta name="keywords" content="Список отчетов, Тептар, тептар">
-  <link type="text/css" rel="stylesheet" href="style.css">
-  <link type="text/css" rel="stylesheet" href="../menu.css">
-  <link type="text/css" rel="stylesheet" href="../header.css">
+  <link type="text/css" rel="stylesheet" href="./assets/css/style.css">
+  <script type="text/javascript" src="./assets/js/script.js"></script>
+  <script src="../reusable-blocks/menu/menu.js"></script>
+  <script src="../reusable-blocks/menu/__main.js"></script>
+  <script src="../reusable-blocks/menu/__header.js"></script>
+  <script src="../reusable-blocks/menu/__body.js"></script>
+  <script src="../reusable-blocks/menu/__footer.js"></script>
+  <script src="../reusable-blocks/header/header.js"></script>
+  <script src="../reusable-blocks/header/__main.js"></script>
+  <script src="blocks/content/body/reports.js"></script>
+  <script src="blocks/content/body/reports-title.js"></script>
+  <script src="blocks/content/body/reports-list.js"></script>
+  <script src="blocks/content/body/body.js"></script>
+  <script src="blocks/content/body/__footer.js"></script>
+  <script src="assets/js/script.js"></script>
   <title>Список районов</title>
 </head>
 <body>
@@ -128,8 +140,6 @@
           </div>
         </div>
       </div>
-
-  <script src="./script.js"></script>
 
 </body>
 </html>
