--- a/public/musa/one-district/one_district.html
+++ b/public/musa/one-district/one_district.html
@@ -4,9 +4,20 @@
   <meta charset="utf-8">
   <meta name="description" content="Список отчетов">
   <meta name="keywords" content="Список отчетов, Тептар, тептар">
-  <link type="text/css" rel="stylesheet" href="style.css">
-  <link type="text/css" rel="stylesheet" href="../menu.css">
-  <link type="text/css" rel="stylesheet" href="../header.css">
+  <link type="text/css" rel="stylesheet" href="./assets/css/style.css">
+  <script type="text/javascript" src="./assets/js/script.js"></script>
+  <script src="../reusable-blocks/menu/menu.js"></script>
+  <script src="../reusable-blocks/menu/__main.js"></script>
+  <script src="../reusable-blocks/menu/__header.js"></script>
+  <script src="../reusable-blocks/menu/__body.js"></script>
+  <script src="../reusable-blocks/menu/__footer.js"></script>
+  <script src="../reusable-blocks/header/header.js"></script>
+  <script src="../reusable-blocks/header/__main.js"></script>
+  <script type="text/javascript"  src="./blocks/content/body/body.js"></script>
+  <script type="text/javascript" src="./blocks/content/body/__reports-title.js"></script>
+  <script type="text/javascript"  src="./blocks/content/body/__reports.js"></script>
+  <script type="text/javascript"  src="./blocks/content/body/__reports-footer.js"></script>
+  <script type="text/javascript"  src="./blocks/content/content.js"></script>
   <title>Район</title>
 </head>
 <body>
@@ -124,7 +135,7 @@
           <div class="reports-footer none">
               <div class="reports-footer__action">
                 Выгрузить
-                <div class="reports-footer__action__sort">
+                <div class="reports-footer__action__sort none">
                   <div class="variables" value="excel">
                     <img width="30" height="30" src="../assets/img/svg/xlsx.svg">
                     Выгрузить в Excel
@@ -147,8 +158,6 @@
           </div>
         </div>
       </div>
-
-  <script src="./script.js"></script>
 
 </body>
 </html>
