--- a/public/musa/report-form/report-form.html
+++ b/public/musa/report-form/report-form.html
@@ -4,9 +4,20 @@
   <meta charset="utf-8">
   <meta name="description" content="Список отчетов">
   <meta name="keywords" content="Список отчетов, Тептар, тептар">
-  <link type="text/css" rel="stylesheet" href="style.css">
-  <link type="text/css" rel="stylesheet" href="../menu.css">
-  <link type="text/css" rel="stylesheet" href="../header.css">
+  <link type="text/css" rel="stylesheet" href="./assets/css/style.css">
+  <script src="../reusable-blocks/menu/menu.js"></script>
+  <script src="../reusable-blocks/menu/__main.js"></script>
+  <script src="../reusable-blocks/menu/__header.js"></script>
+  <script src="../reusable-blocks/menu/__body.js"></script>
+  <script src="../reusable-blocks/menu/__footer.js"></script>
+  <script src="../reusable-blocks/header/header.js"></script>
+  <script src="../reusable-blocks/header/__main.js"></script>
+  <script src="./blocks/content/body/body.js"></script>
+  <script src="./blocks/content/body/reports-title.js"></script>
+  <script src="./blocks/content/body/reports-form.js"></script>
+  <script src="./blocks/content/body/__body.js"></script>
+  <script src="./blocks/content/body/__footer.js"></script>
+  <script src="./blocks/content/content.js"></script>
   <title>Создание отчета</title>
 </head>
 <body>
@@ -186,7 +197,6 @@
         </div>
       </div>
 
-  <script src="./script.js"></script>
 
 </body>
 </html>
