--- a/public/musa/reports/reports.html
+++ b/public/musa/reports/reports.html
@@ -4,10 +4,20 @@
   <meta charset="utf-8">
   <meta name="description" content="Список отчетов">
   <meta name="keywords" content="Список отчетов, Тептар, тептар">
-  <link type="text/css" rel="stylesheet" href="style.css">
-  <link type="text/css" rel="stylesheet" href="menu.css">
-  <link type="text/css" rel="stylesheet" href="header.css">
-  <script type="text/javascript" src="./script.js"></script>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <script type="text/javascript" src="./assets/js/script.js"></script>
+  <script type="text/javascript"  src="./blocks/menu/menu.js"></script>
+  <script type="text/javascript"  src="./blocks/menu/__main.js"></script>
+  <script type="text/javascript"  src="./blocks/menu/__header.js"></script>
+  <script type="text/javascript"  src="./blocks/menu/__body.js"></script>
+  <script type="text/javascript"  src="./blocks/menu/__footer.js"></script>
+  <script type="text/javascript"  src="./blocks/content/header/header.js"></script>
+  <script type="text/javascript"  src="./blocks/content/header/__main.js"></script>
+  <script type="text/javascript"  src="./blocks/content/body/body.js"></script>
+  <script type="text/javascript" src="./blocks/content/body/__reports-title.js"></script>
+  <script type="text/javascript"  src="./blocks/content/body/__reports.js"></script>
+  <script type="text/javascript"  src="./blocks/content/body/__reports-footer.js"></script>
+  <script type="text/javascript"  src="./blocks/content/content.js"></script>
   <title>Список отчетов</title>
 </head>
 <body>
@@ -46,6 +56,7 @@
           </span>
         </div>
       </div>
+      </div>
       <div class="content">
         <header class="header">
           <div class="header__main">
@@ -65,9 +76,6 @@
                   <span class="user__info__post">Районный сотрудник</span>
                 </span>
                 <span class="user__info__arrow">
-                  <!--
-                  html последовательность стрелки вниз вместо альтернативного текста
-                  -->
                   <img width="32" height="32" src="./assets/img/svg/arrow_drop_down.svg" alt="&#x2193">
                 </span>
               </div>
