Added a lot of things

--- a/public/musa/districts/discricts.html
+++ b/public/musa/districts/discricts.html
@@ -120,7 +120,7 @@
           </div>
           <div class="reports">
             <div class="reports-list">
-                <div class="reports-list__body">
+                <div class="reports__body">
                 </div>
             </div>
           </div>
