--- a/public/musa/one-district/one_district.html
+++ b/public/musa/one-district/one_district.html
@@ -128,7 +128,7 @@
                     Ответственный
                   </div>
             </div>
-              <div class="reports-list__body">
+              <div class="reports__body">
               </div>
             </div>
           </div>
